update references to mfe from mtfh

--- a/packages/react/src/components/side-bar/styles.module.scss
+++ b/packages/react/src/components/side-bar/styles.module.scss
@@ -1,7 +1,7 @@
 @import "~lbh-frontend/lbh/base";
 @import "~govuk-frontend/govuk/helpers/visually-hidden";
 
-.mtfh-sidebar {
+.mfe-sidebar {
   .lbh-summary-list {
     .govuk-summary-list__key,
     .govuk-summary-list__value {
