--- a/packages/react/src/components/date-input/styles.module.scss
+++ b/packages/react/src/components/date-input/styles.module.scss
@@ -1,7 +1,7 @@
 @import "~lbh-frontend/lbh/base";
 @import "~lbh-frontend/lbh/components/lbh-date-input/date-input";
 
-// .mtfh-date-input {
+// .mfe-date-input {
 //   display: grid;
 //   grid-gap: 1em;
 //   grid-template-columns: repeat(3, minmax(0px, 1fr));
